entity_macros/tests/ui/derive/ent/generic-field-cannot-convert-to-value.stderr
error[E0277]: the trait bound `Value: From<T>` is not satisfied
 --> $DIR/generic-field-cannot-convert-to-value.rs:4:17
  |
4 | #[derive(Clone, Ent)]
  |                 ^^^ the trait `From<T>` is not implemented for `Value`
  |
  = note: required because of the requirements on the impl of `Into<Value>` for `T`
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
